--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "fideloper/proxy": "^4.0",
         "jeroen-g/laravel-packager": "^2.0",
         "laravel/framework": "5.6.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "symfony/yaml": "^4.1"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
